@@ -3,10 +3,18 @@ package org.sunflow.image;
 import org.sunflow.math.MathUtils;
 
 /**
- * This class contains many static helper methods helpfull for encoding colors
- * into files.
+ * This class contains many static helper methods that may be helpful for
+ * encoding colors into files.
  */
 public final class ColorEncoder {
+    /**
+     * Undoes the premultiplication of the specified color array. The original
+     * colors are not modified.
+     * 
+     * @param color an array of premultiplied colors
+     * @param alpha alpha values corresponding to the colors
+     * @return an array of unpremultiplied colors
+     */
     public static final Color[] unpremult(Color[] color, float[] alpha) {
         Color[] output = new Color[color.length];
         for (int i = 0; i < color.length; i++)
@@ -14,6 +22,13 @@ public final class ColorEncoder {
         return output;
     }
 
+    /**
+     * Moves the colors in the specified array to non-linear space. The original
+     * colors are not modified.
+     * 
+     * @param color an array of colors in linear space
+     * @return a new array of the same colors in non-linear space
+     */
     public static final Color[] unlinearize(Color[] color) {
         Color[] output = new Color[color.length];
         for (int i = 0; i < color.length; i++)
@@ -21,6 +36,13 @@ public final class ColorEncoder {
         return output;
     }
 
+    /**
+     * Quantize the specified colors to 8-bit RGB format. The returned array
+     * contains 3 bytes for each color in the original array.
+     * 
+     * @param color array of colors to quantize
+     * @return array of quantized RGB values
+     */
     public static final byte[] quantizeRGB8(Color[] color) {
         byte[] output = new byte[color.length * 3];
         for (int i = 0, index = 0; i < color.length; i++, index += 3) {
@@ -31,7 +53,15 @@ public final class ColorEncoder {
         }
         return output;
     }
-    
+
+    /**
+     * Quantize the specified colors to 8-bit RGBA format. The returned array
+     * contains 4 bytes for each color in the original array.
+     * 
+     * @param color array of colors to quantize
+     * @param alpha array of alpha values (same length as color)
+     * @return array of quantized RGBA values
+     */
     public static final byte[] quantizeRGBA8(Color[] color, float[] alpha) {
         byte[] output = new byte[color.length * 4];
         for (int i = 0, index = 0; i < color.length; i++, index += 4) {
@@ -43,8 +73,15 @@ public final class ColorEncoder {
         }
         return output;
     }
-    
-    public static final int[] quantizeRGBE(Color[] color) {
+
+    /**
+     * Encode the specified colors using Ward's RGBE technique. The returned
+     * array contains one int for each color in the original array.
+     * 
+     * @param color array of colors to encode
+     * @return array of encoded colors
+     */
+    public static final int[] encodeRGBE(Color[] color) {
         int[] output = new int[color.length];
         for (int i = 0; i < color.length; i++)
             output[i] = color[i].toRGBE();
