@@ -56,70 +56,70 @@ public class HDRBitmapReader implements BitmapReader {
         if ((width < 8) || (width > 0x7fff)) {
             // run length encoding is not allowed so read flat
             readFlatRGBE(f, 0, width * height, pixels);
-            return null;
-        }
-        int rasterPos = 0;
-        int numScanlines = height;
-        int[] scanlineBuffer = new int[4 * width];
-        while (numScanlines > 0) {
-            int r = f.read();
-            int g = f.read();
-            int b = f.read();
-            int e = f.read();
-            if ((r != 2) || (g != 2) || ((b & 0x80) != 0)) {
-                // this file is not run length encoded
-                pixels[rasterPos] = (r << 24) | (g << 16) | (b << 8) | e;
-                readFlatRGBE(f, rasterPos + 1, width * numScanlines - 1, pixels);
-                return null;
-            }
+        } else {
+            int rasterPos = 0;
+            int numScanlines = height;
+            int[] scanlineBuffer = new int[4 * width];
+            while (numScanlines > 0) {
+                int r = f.read();
+                int g = f.read();
+                int b = f.read();
+                int e = f.read();
+                if ((r != 2) || (g != 2) || ((b & 0x80) != 0)) {
+                    // this file is not run length encoded
+                    pixels[rasterPos] = (r << 24) | (g << 16) | (b << 8) | e;
+                    readFlatRGBE(f, rasterPos + 1, width * numScanlines - 1, pixels);
+                    break;
+                }
 
-            if (((b << 8) | e) != width)
-                throw new BitmapFormatException("Invalid scanline width");
-            int p = 0;
-            // read each of the four channels for the scanline into
-            // the buffer
-            for (int i = 0; i < 4; i++) {
-                if (p % width != 0)
-                    throw new BitmapFormatException("Unaligned access to scanline data");
-                int end = (i + 1) * width;
-                while (p < end) {
-                    int b0 = f.read();
-                    int b1 = f.read();
-                    if (b0 > 128) {
-                        // a run of the same value
-                        int count = b0 - 128;
-                        if ((count == 0) || (count > (end - p)))
-                            throw new BitmapFormatException("Bad scanline data - invalid RLE run");
+                if (((b << 8) | e) != width)
+                    throw new BitmapFormatException("Invalid scanline width");
+                int p = 0;
+                // read each of the four channels for the scanline into
+                // the buffer
+                for (int i = 0; i < 4; i++) {
+                    if (p % width != 0)
+                        throw new BitmapFormatException("Unaligned access to scanline data");
+                    int end = (i + 1) * width;
+                    while (p < end) {
+                        int b0 = f.read();
+                        int b1 = f.read();
+                        if (b0 > 128) {
+                            // a run of the same value
+                            int count = b0 - 128;
+                            if ((count == 0) || (count > (end - p)))
+                                throw new BitmapFormatException("Bad scanline data - invalid RLE run");
 
-                        while (count-- > 0) {
+                            while (count-- > 0) {
+                                scanlineBuffer[p] = b1;
+                                p++;
+                            }
+                        } else {
+                            // a non-run
+                            int count = b0;
+                            if ((count == 0) || (count > (end - p)))
+                                throw new BitmapFormatException("Bad scanline data - invalid count");
                             scanlineBuffer[p] = b1;
                             p++;
-                        }
-                    } else {
-                        // a non-run
-                        int count = b0;
-                        if ((count == 0) || (count > (end - p)))
-                            throw new BitmapFormatException("Bad scanline data - invalid count");
-                        scanlineBuffer[p] = b1;
-                        p++;
-                        if (--count > 0) {
-                            for (int x = 0; x < count; x++)
-                                scanlineBuffer[p + x] = f.read();
-                            p += count;
+                            if (--count > 0) {
+                                for (int x = 0; x < count; x++)
+                                    scanlineBuffer[p + x] = f.read();
+                                p += count;
+                            }
                         }
                     }
                 }
+                // now convert data from buffer into floats
+                for (int i = 0; i < width; i++) {
+                    r = scanlineBuffer[i];
+                    g = scanlineBuffer[i + width];
+                    b = scanlineBuffer[i + 2 * width];
+                    e = scanlineBuffer[i + 3 * width];
+                    pixels[rasterPos] = (r << 24) | (g << 16) | (b << 8) | e;
+                    rasterPos++;
+                }
+                numScanlines--;
             }
-            // now convert data from buffer into floats
-            for (int i = 0; i < width; i++) {
-                r = scanlineBuffer[i];
-                g = scanlineBuffer[i + width];
-                b = scanlineBuffer[i + 2 * width];
-                e = scanlineBuffer[i + 3 * width];
-                pixels[rasterPos] = (r << 24) | (g << 16) | (b << 8) | e;
-                rasterPos++;
-            }
-            numScanlines--;
         }
         f.close();
         // flip image
